example/lib/src/generated/errors/errors_localization_zh.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Chinese (`zh`).
class ErrorsLocalizationZh extends ErrorsLocalization {
  ErrorsLocalizationZh([String locale = 'zh']) : super(locale);

  @override
  String get error => '发生错误';

  @override
  String get unexpectedError => '发生了意外错误';

  @override
  String get bugReportSentText => '错误报告已成功发送。';
}

/// The translations for Chinese, as used in China (`zh_CN`).
class ErrorsLocalizationZhCn extends ErrorsLocalizationZh {
  ErrorsLocalizationZhCn() : super('zh_CN');

  @override
  String get error => '发生错误';

  @override
  String get unexpectedError => '发生了意外错误';

  @override
  String get bugReportSentText => '错误报告已成功发送。';
}

/// The translations for Chinese, as used in Hong Kong (`zh_HK`).
class ErrorsLocalizationZhHk extends ErrorsLocalizationZh {
  ErrorsLocalizationZhHk() : super('zh_HK');

  @override
  String get error => '發生咗錯誤';

  @override
  String get unexpectedError => '發生咗意外嘅錯誤';

  @override
  String get bugReportSentText => '錯誤報告已成功發送.';
}
